--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.level_five.demos.rfsample</groupId>
+    <groupId>com.fr_soft.demos.rfsample</groupId>
     <artifactId>RFSample</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -30,6 +30,16 @@
             <groupId>org.robotframework</groupId>
             <artifactId>robotframework</artifactId>
             <version>2.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring</artifactId>
+            <version>2.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>2.5.6</version>
         </dependency>
         <dependency>
             <groupId>org.jmock</groupId>
