--- a/pom.xml
+++ b/pom.xml
@@ -16,40 +16,25 @@
 
 	<dependencies>
 		<dependency>
+      <groupId>javax.servlet</groupId>
+	    <artifactId>javax.servlet-api</artifactId>
+	    <version>3.1.0</version>
+    </dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
+			<version>4.12</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>servletapi</groupId>
-			<artifactId>servletapi</artifactId>
-			<version>2.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.robotframework</groupId>
-			<artifactId>robotframework</artifactId>
-			<version>2.8.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring</artifactId>
-			<version>2.5.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>2.5.6</version>
+			<version>4.2.1.RELEASE</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jmock</groupId>
-			<artifactId>jmock-junit4</artifactId>
-			<version>2.5.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jmock</groupId>
-			<artifactId>jmock</artifactId>
-			<version>2.5.1</version>
+			<groupId>org.robotframework</groupId>
+			<artifactId>robotframework</artifactId>
+			<version>2.9.1</version>
 		</dependency>
 	</dependencies>
 
@@ -58,7 +43,7 @@
 			<plugin>
 				<groupId>org.robotframework</groupId>
 				<artifactId>robotframework-maven-plugin</artifactId>
-				<version>1.4.2</version>
+				<version>1.4.5</version>
 				<executions>
 					<execution>
 						<goals>
@@ -69,6 +54,11 @@
 				<configuration>
 					<testCasesDirectory>${project.basedir}/src/test/resources/scenarios
 					</testCasesDirectory>
+	<!--
+					<extraPathDirectories>
+						<extraPathDirectory>/Library/Python/2.7/site-packages/</extraPathDirectory>
+					</extraPathDirectories>
+	-->
 				</configuration>
 			</plugin>
 			<plugin>
